# slotmap

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
slotmap/: CMakeLists.txt  bitset.h  slotmap.h  slotmap.inl  slotmap.natvis
slotmap-benchmark/: CMakeLists.txt  benchmark_common.h  bitset_benchmark.cpp  plf_colony.h  slotmap_benchmark.cpp
slotmap-tests/: CMakeLists.txt  bitsetTest.cpp  bitset_test.cpp  function_tests.cpp  slotmapTest.cpp  slotmap_test.cpp  test_common.h  testsCommon.h
